test/fails/bad_functions/overloading1.lgl
int f(int x) {
    return x;
}

int f(int x) {
    return x;
}

void main() {
    return;
}